--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://github.com/q877220/myblog.git'
+baseURL = 'https://q877220.github.io/myblog/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'ananke'
