--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,12 @@ name: Auto Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  schedule:
+    - cron: '*/1 * * * *' # 每分钟触发
+
+env:
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
 jobs:
   deploy:
@@ -13,6 +17,25 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: pip install openai python-dotenv scikit-learn pandas
+
+      - name: Generate AI post
+        run: python generate_post.py
+
+      - name: Commit changes
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Auto: 新增AI生成文章" || echo "No changes to commit"
+          git push
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
